Se cambia el color de 0D3076(dorado) a BE9E21(azul oscuro) en toda la página

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ HEADER
 
 .logo-dec
 {
-    color: #be9e21;
+    color: #0D3076;
 }
 .navbar-default .navbar-brand {
     color: #fff;
@@ -145,12 +145,12 @@ HEADER
     transition: color 0.2s ease-out;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
-    color: #be9e21;
+    color: #0D3076;
     background-color: transparent;
 }
 .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
     background-color: transparent;
-    color: #be9e21;
+    color: #0D3076;
 }
 .banner-info
 {
@@ -199,17 +199,17 @@ h2.bnr-sub-title
 
 .btn-download
 {
-    background-color: #be9e21;
+    background-color: #0D3076;
 }
 .btn-more, .btn-more:focus
 {
     margin-left: 15px;
-    border: 1px solid #be9e21;
-    color: #be9e21;
+    border: 1px solid #0D3076;
+    color: #0D3076;
 }
 
 .btn-more:hover {
-    background: #be9e21;
+    background: #0D3076;
     color: #fff;
 }
 
@@ -247,7 +247,7 @@ features
     border-top: 0px;
     height: 3px;
     width: 40px;
-    background-color: #BE9E21;
+    background-color: #0D3076;
 }
 .wrap-item h3 {
     font-size: 24px;
@@ -338,7 +338,7 @@ ul.service-list li i
 }
 .service-item a
 {
-    color: #be9e21;
+    color: #0D3076;
 }
 .mr-btn-15
 {
@@ -397,7 +397,7 @@ ul.service-list li i
     width:100%;
     height:100%;
     padding: 59px 30px;
-    background-color: #BE9E21;
+    background-color: #0D3076;
     backface-visibility:hidden;
     -webkit-transform:rotateY(-180deg);
     -moz-transform:rotateY(-180deg);
@@ -560,9 +560,9 @@ contact
 {
     background-color: transparent;
     border-radius: 60px;
-    color: #be9e21;
+    color: #0D3076;
     font-weight: 400;
-    border: 1px solid #be9e21;
+    border: 1px solid #0D3076;
     font-size: 14px;
     padding: 6px 20px;
 }
@@ -570,11 +570,11 @@ contact
 {
     background-color: transparent;
     border-radius: 0px;
-    color: #be9e21 !important;
-    border-color: #be9e21;
+    color: #0D3076 !important;
+    border-color: #0D3076;
 }
 .form-control:focus {
-    border-color: #be9e21;
+    border-color: #0D3076;
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
@@ -621,7 +621,7 @@ contact
 }
 .loction-info p i
 {
-    color: #be9e21;
+    color: #0D3076;
 }
 /***********************************
 ************************************
@@ -639,7 +639,7 @@ contact
     width: 42px;
     height: 42px;
     color: #ffffff;
-    background: #be9e21;
+    background: #0D3076;
     font-size: 14px;
     line-height: 42px;
     text-align: center;
@@ -652,7 +652,7 @@ contact
     background-color: #fff;
 }
 #footer a{
-    color: #be9e21;
+    color: #0D3076;
     font-weight: 400;
 }
 /***********************************
@@ -681,7 +681,7 @@ cta
 }
 .cta .cta-info .cta-btn {
     margin-top: 16px;
-    background-color: rgb(190, 158, 33);
+    background-color: rgb(87,169,238);
     padding: 20px 50px;
     color: #FFF;
     font-size: 22px;
