Boton de whats color

--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ h2.bnr-sub-title
 
 .btn-download
 {
-    background-color: #0D3076;
+    background-color: #00bb2b;
 }
 .btn-more, .btn-more:focus
 {
