--- a/css/style.css
+++ b/css/style.css
@@ -570,7 +570,7 @@ contact
 {
     background-color: transparent;
     border-radius: 0px;
-    color: #0D3076 !important;
+    color:#fff !important;
     border-color: #0D3076;
 }
 .form-control:focus {
