--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
 	line-height: 1.4;
 	font-family: 'Roboto', sans-serif;
-    color: #0E161C;
+    color: #0D3076;
     font-size: 16px;
     font-weight: 300;
     letter-spacing: 0.5px;
