--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@ features
     font-family: 'Fira Sans', sans-serif;
     font-size: 35px;
     text-transform: uppercase;
+    font-style: italic;
 }
 .item-img
 {
